[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjaia"
dynamic = ["version"]
description = "Jaia python utilities"
license = {text=""}
authors = [
    { name = "Jaia Robotics", email = "edsanville@gmail.com" },
]
dependencies = [
    "cmocean",
    "numpy",
    "protobuf",
    "scipy",
    "turfpy",
    "wheel",
]

[project.urls]
Homepage = "https://www.jaia.tech"
