[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjaiaprotobuf"
dynamic = ["version"]
description = "Jaia python protobuf messages"
license = {text=""}
authors = [
    { name = "Jaia Robotics", email = "edsanville@gmail.com" },
]
dependencies = [
    "protobuf==3.20.0",
    "wheel",
]

[project.urls]
Homepage = "https://www.jaia.tech"
